2006-05-12  Brian Cameron  <brian.cameron@sun.com>

	* utils/Makefile.am: Add gdm-ssh-session to EXTRA_DIST.

2006-05-12  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmsession.c: Fix bug that was causing the
	  ShowGnomeFailsafeSession and ShowGnomeXtermSession configuration
	  values not to work right.

2006-05-12  Christian Kirbach  <Christian.Kirbach@siemens.com>

	* daemon/gdm.c, gui/gdmXnestchosser.c, gui/gdmchooser.c,
	  gui/gdmflexiserver.c: stop using popt in favour of glib's GOption
	  command line parsing.
	* docs/C/gdm.xml: -nodaemon command line option has become --nodaemon.
	  GDM User Commands section has been rewritten accordingly. Also the
	  interface stability sections reflects the new changes.
	* daemon/gdm.c (gdm_handle_user_message): Fix compiler warning (too
	  few arguments).
	* gui/gdmconfig.c (gdm_config_get_xservers): Remove two obsolete
	  variable declarations.

2006-05-12  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.15.2:
        * NEWS: Updated.

2006-05-12  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_geometry.c: Fix layout of buttons.
	  Patch provided by Erwann Chenede <erwann.chenede@sun.com>.

2006-05-12  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.15.1:
        * NEWS: Updated.
	* docs/C/gdm.xml: Updated to reflect which interfaces are
	  supported starting with 2.14.6.

2006-05-12  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_parser.c: Fix spacing.

2006-05-10  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c: Fix reference to SystemMenu key as a boolean, not
	  a string, so that SuspendCommand works right.  Fixes bug #341312.  

2006-05-09  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlogin.c, gui/greeter/greeter_parser.c,
	  gui/greeter/themes/circles/circles.xml,
	  gui/greeter/themes/happygnome/happygnome.xml,
	  gui/greeter/themes/happygnome-list/happygnome-list.xml:  Change
	  "Start Over" to "Start Again" since discussion with Calum Benson