@@ -1,3 +1,8 @@
+2006-05-15  Brian Cameron  <brian.cameron@sun.com>
+
+	* gui/gdmcommon.c: Use ngettext.  Patch provided by Benoit Dejean
+	  <benoit@placenet.org>.  Fixes bug #341680.
+
 2006-05-12  Brian Cameron  <brian.cameron@sun.com>
 
 	* utils/Makefile.am: Add gdm-ssh-session to EXTRA_DIST.
